# LuaBridge

./: .clang-format  .gitignore  .gitmodules  CHANGES  CHANGES.TXT  CHANGES.md  CMakeLists.txt  Constructor.h  Doxyfile  FuncTraits.h  LuaBridge.cpp  LuaBridge.h  LuaBridge2.h  LuaBridge3.h  LuaBridgeExtras.h  LuaException.h  LuaHelpers.h  LuaRef.h  Manual.html  README.md  RefCountedObject.h  RefCountedPtr.h  TypeTraits.h  all.hpp  biicode.conf  meson.build  shared_ptr.h
.github/workflows/: cmake.yml
LuaBridge/: class.h  luabridge.cpp  luabridge.h  shared_ptr.cpp  shared_ptr.h  stack.h  typelist.h
Source/: CMakeLists.txt
Source/LuaBridge/: Array.h  List.h  LuaBridge.h  Map.h  Pair.h  RefCountedObject.h  RefCountedPtr.h  SharedPtr.h  UnorderedMap.h  Vector.h
Source/LuaBridge/detail/: CFunctions.h  ClassInfo.h  Config.h  Constructor.h  FuncTraits.h  Iterator.h  LuaBridge.cpp  LuaBridgeExtras.h  LuaException.h  LuaHelpers.h  LuaPop.h  LuaRef.h  LuaVal.h  Namespace.h  RefCountedObject.h  RefCountedPtr.h  Security.h  Stack.h  TypeInfo.h  TypeList.h  TypeTraits.h  Userdata.h  dump.h
Tests/: CMakeLists.txt  test.cpp  test.lua
Tests/JuceLibraryCode/: BinaryData.cpp
Tests/Lua/: LuaLibrary.h  LuaLibrary5.1.5.cpp
Tests/Lua/lua-5.1.5/src/: lgc.h  lobject.c  lstate.h  lua.h
Tests/Lua/lua-5.1.5/test/: README  bisect.lua  cf.lua
Tests/Lua/lua-5.2.4/src/: luaconf.h
Tests/Lua/lua-5.4.4/src/: ldebug.c  lfunc.c  llex.c
Tests/Source/: ArrayTests.cpp  ClassTests.cpp  IssueTests.cpp  IteratorTests.cpp  LegacyTests.cpp  ListTests.cpp  LuaRefTests.cpp  MapTests.cpp  NamespaceTests.cpp  OptionalTests.cpp  PairTests.cpp  Performance.cpp  Performance.h  PerformanceTests.cpp  RefCountedObjectTests.cpp  RefCountedPtrTests.cpp  SharedPtrTests.cpp  StackTests.cpp  TestBase.h  TestTypes.h  Tests.cpp  Tests.h  TestsMain.cpp  UnorderedMapTests.cpp  UserdataTests.cpp  VectorTests.cpp
include/: luabridge.h  luabridge.hpp  shared_ptr.hpp
include/impl/: class.h  class.hpp  scope.h  scope.hpp  shared_ptr.hpp  stack.hpp  typelist.h  typelist.hpp
luabridge/tags/0.1/: LICENSE.txt  Makefile  README.txt  luabridge.vcproj
luabridge/tags/0.1/include/impl/: module.hpp  shared_ptr.hpp  stack.hpp  typelist.hpp
luabridge/tags/0.1/src/: luabridge.cpp  test.lua
luabridge/trunk/: Makefile  luabridge.hpp  luabridge.sln  luabridge.vcproj  luabridge_impl.hpp  luatest.cpp  luatest.sln  luatest.vcproj  shared_ptr-impl.hpp  shared_ptr.cpp  shared_ptr.hpp  shared_ptr_impl.hpp  test.lua  test.vcproj  tests.cpp
luabridge/trunk/include/: luabridge.hpp  shared_ptr.hpp
luabridge/trunk/include/impl/: class.hpp  shared_ptr.hpp  stack.hpp  typelist.hpp
luabridge/trunk/luabridge-impl/: class.hpp  luabridge.cpp  module.hpp  stack.hpp  typelist.hpp
luabridge/trunk/src/: luabridge.cpp  shared_ptr.cpp  test.cpp  tests.cpp  tests.hpp
projects/vc7.1/: luabridge.sln  luabridge.vcproj  test.vcproj
projects/vc8/: luabridge.sln  luabridge.vcproj  test.vcproj
projects/vc9/: luabridge.sln  luabridge.vcproj  test.vcproj
src/: luabridge.cpp  shared_ptr.cpp  test.cpp
tags/0.1/include/: luabridge.hpp
tags/0.2/: LICENSE.txt  README.txt
tags/0.2/include/impl/: class.hpp  module.hpp
tags/0.2/projects/vc8/: luabridge.vcproj  test.vcproj
tags/0.2/src/: luabridge.cpp
trunk/: LICENSE.txt  Makefile  README.txt  luabridge.sln  test.vcproj
trunk/include/: luabridge.hpp  shared_ptr.hpp
trunk/include/impl/: class.hpp  module.hpp  scope.hpp  shared_ptr.hpp  stack.hpp  typelist.hpp
trunk/projects/vc7.1/: luabridge.vcproj  test.vcproj
trunk/projects/vc8/: luabridge.vcproj  test.vcproj
trunk/projects/vc9/: luabridge.sln  luabridge.vcproj  test.vcproj
trunk/src/: luabridge.cpp  shared_ptr.cpp  test.cpp  test.lua
